ec2.yml
Parameters:
  LatestAmiId:
    Description: AMI Linux EC2 
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

Resources:
  MyInstanceKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: NewKeyPair
      PublicKeyMaterial: ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCEIsB9im2NUCKk41j2wSqUU5sl+sbQn5W/96B+QRXUMtxWzPMKR1yzOfFYFF3t4FnyrTj1rez84Ae0kGKbWfFkni9YbaAmYNBEp2Yuw4N1NmlbF9xHsKAGmOHqqfn4RnkXJB6/ZoCUqEpyMza+Zlrb9UHOr2plzPk9hJoWb5XqejQRFhFBv1MnlQp7sDGC9kM009T7uGIDabtNGVcW3qH3a4doMVEq0fH1FrWdwusqPOin4mAy1GLPz1HNGBOtBVzib4B2xM6W20Ph2ZgbbcLXQMw4AujFQyXF8NkZqNPWbICQSE9szsdHED0oq3TL6Kyivlgp8wLfMdZdcNB/HTVN

  MyInstance:
    Type : 'AWS::EC2::Instance'
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref MyInstanceKeyPair
      SecurityGroups:
        - Ref: SSHSecurityGroup #use : instead of !
        - Ref: ServerSecurityGroup
      UserData:
        Fn::Base64: !Sub
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          cd /var/www/html
          echo "<br>" >> index.html
          echo "<h1>Hello World" > /var/www/html/index.html

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Yaml Ec2 Surity Group # Required
      GroupName: first-yaml-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  
  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: yaml Ec2 security Grouo 2
      GroupName: second-yaml-sg
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 192.168.1.1/32
